skiplang/compiler/invalid_tests/visibility/module_private_static_collision.sk
module Foo;

private fun bar(): Int {
  42
}

module end;

class Foo{} {
  static fun bar(): Int {
    7
  }
}

fun main(): void {
  _ = Foo.bar();
  print_raw("Fail")
}
